cluster/apps/pfire/scorest/app/top10.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: top10
  namespace: pfire
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/appName: "Scorest Top 10"
    hajimari.io/icon: mdi:chart-line
    hajimari.io/group: "pfire"
    hajimari.io/info: "Top 10 best stocks"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/server-snippet: |
      location = / {
        return 302 /leaderboard;
      }
      location /api/stats/stream {
        proxy_pass http://scorest.pfire.svc.cluster.local:3000;
        proxy_buffering off;
        proxy_cache off;
        proxy_set_header Connection '';
        proxy_http_version 1.1;
        chunked_transfer_encoding on;
      }
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_cache leaderboard_cache;
      proxy_cache_valid 200 5m;
      proxy_cache_use_stale updating error timeout;
      proxy_cache_lock on;
      add_header X-Cache-Status $upstream_cache_status;
spec:
  ingressClassName: nginx
  rules:
    - host: "top10.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /leaderboard
            pathType: Prefix
            backend:
              service:
                name: scorest
                port:
                  number: 3000
          - path: /api/leaderboard
            pathType: Prefix
            backend:
              service:
                name: scorest
                port:
                  number: 3000
          - path: /api/stats
            pathType: Prefix
            backend:
              service:
                name: scorest
                port:
                  number: 3000
          - path: /assets
            pathType: Prefix
            backend:
              service:
                name: scorest
                port:
                  number: 3000
          - path: /vite.svg
            pathType: Prefix
            backend:
              service:
                name: scorest
                port:
                  number: 3000
  tls:
    - hosts:
        - "top10.${SECRET_DOMAIN}"
